2004-10-23  Roland Illig  <roland.illig@gmx.de>

	* complete.c (environ): Don't declare environ on Cygwin.
	* utilunix.c (mc_tmpdir): Convert uid to unsigned long for
	pathname of the temporary directory.

	From Pavel Tsekov <ptsekov gmx net>.

2004-10-23  Roland Illig  <roland.illig@gmx.de>

	* regex.c (regerror): Never use the __memcpy function, as it
	breaks the build on Cygwin.

2004-10-22  Roland Illig  <roland.illig@gmx.de>

	* regex.c: Fix the C preprocessor feature tests. They produced
	warnings before.
	* view.c (display): Fixed bug that displayed an empty file in
	hexview mode with growing buffers.

2004-10-22  Pavel Shirshov  <me@pavelsh.pp.ru>

        * main.c (print_color_usage): Update list of keywords for global,
	menu and help.

2004-10-21  Roland Illig  <roland.illig@gmx.de>

	* cons.saver.c (die): Declare as "static" to avoid gcc warning.
	(send_contents): Likewise.

2004-10-20  Jakub Jelinek  <jakub@redhat.com>

	* user.c (user_menu_cmd): Fix error. test_line() doesn't handle
	consecutive '+'s and '='s correctly. Pass a line starting with 
	a single '+' or '=' instead.

2004-10-17  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (add_new_entry_cmd): Fix memory leaks.

2004-10-16  Roland Illig  <roland.illig@gmx.de>

	* file.c (do_file_error): Add const qualifier. (query_recursive):
	Likewise. (query_replace): Likewise.
	* view.c: Rename EOF_offset to INVALID_OFFSET, as it is mostly
	used to mark an invalid cache.

2004-10-13  Jindrich Novy  <jnovy@redhat.com>

	* util.c (strip_password): Add "/#sh:".

2004-10-12  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* myslang.h: Check USE_INCLUDED_SLANG properly.

2004-10-11  Roland Illig  <roland.illig@gmx.de>

	* utilunix.c (close_error_pipe): Fixed possible invalid memory access
	(three lines below).

2004-10-11  Leonard den Ottolander  <leonard * den ottolander nl>

	* file.c (copy_dir_dir): Small text fix.

2004-10-06  Alexander Savelyev  <i@fano.com.ua>
